--- a/src/app/health-screening/chlamydia/chlamydia.component.scss
+++ b/src/app/health-screening/chlamydia/chlamydia.component.scss
@@ -36,6 +36,7 @@ body.dark-theme {
 /* Full-width form fields */
 .full-width {
   width: 100%;
+  color: var(--text-color);
   margin-left: 15px;
 }
 
